switch to the markdown lines syntax

--- a/src/content/15-6-run.md
+++ b/src/content/15-6-run.md
@@ -73,7 +73,8 @@ impl Todo {
 }
 ```
 
-Il est temps d'essayer l'application que nous venons de développer avec notre terminal. Commençons par supprimer notre fichier de base de donnée pour un nouveau départ.
+Il est temps d'essayer l'application que nous venons de développer avec notre terminal.
+Commençons par supprimer notre fichier de base de donnée pour un nouveau départ.
 
 `$ rm db.txt`
 
