--- a/src/content/15-7-use.md
+++ b/src/content/15-7-use.md
@@ -2,24 +2,29 @@
 
 # Stocker les todos en JSON avec serde
 
-Ce programme, même si minime, est lancé. Mais on peut toujours l'améliorer un peu. Venant du monde de JavaScript, l'auteur à décidé qu'à la place d'un fichier texte brut, il voulais stocker les valeurs dans un fichier [JSON](https://en.wikipedia.org/wiki/JSON).
+Ce programme, même si minime, est lancé.
+Mais on peut toujours l'améliorer un peu.
+Venant du monde de JavaScript, l'auteur à décidé qu'à la place d'un fichier texte brut, il voulais stocker les valeurs dans un fichier [JSON](https://en.wikipedia.org/wiki/JSON).
 
 Nous allons prendre cette opportunité pour voir comment installer et utiliser un paquet depuis la communauté open source de Rust en passant par [crates.io](https://crates.io/)
 
 ### Installer serde
 
-Pour installer un nouveau paquet comme [serde](https://crates.io/crates/serde) dans notre projet, ouvrons le fichier `Cargo.toml`. Dans le bas, vous devriez voir un champ `[dependencies]`: Ajoutez simplement la ligne suivante au fichier:
+Pour installer un nouveau paquet comme [serde](https://crates.io/crates/serde) dans notre projet, ouvrons le fichier `Cargo.toml`.
+Dans le bas, vous devriez voir un champ `[dependencies]`: Ajoutez simplement la ligne suivante au fichier:
 
 ```rust,ignore
 [dependencies]
 serde_json = "1.0.60"
 ```
 
-Et c'est tout. La prochaine fois que cargo va compiler notre programme, il va aussi télécharger et inclure le nouveau paquet avec notre code.
+Et c'est tout.
+La prochaine fois que cargo va compiler notre programme, il va aussi télécharger et inclure le nouveau paquet avec notre code.
 
 ### Mettre à jour Todo::new
 
-Le premier endroit où nous voulons utiliser serde est lorsque l'on cherche à lire le fichier base de donnée. Maintenant, à la place de lire un fichier ".txt", on veut lire un fichier JSON.
+Le premier endroit où nous voulons utiliser serde est lorsque l'on cherche à lire le fichier base de donnée.
+Maintenant, à la place de lire un fichier ".txt", on veut lire un fichier JSON.
 
 Dans le bloc `impl`, mettons à jour la fonction `new`:
 
@@ -48,7 +53,8 @@ Les changements notables ici sont:
 
 `let f = std::fs::OpenOptions::new()`
 
-Plus de liaison `mut f` pour le fichier OpenOption, car nous n'avons plus besoin d'allouer manuellement le contenu dans une `String` comme auparavant. Serde s'en chargera pour nous.
+Plus de liaison `mut f` pour le fichier OpenOption, car nous n'avons plus besoin d'allouer manuellement le contenu dans une `String` comme auparavant.
+Serde s'en chargera pour nous.
 
 `open("db.json")?;`
 
@@ -60,7 +66,8 @@ On mets à jour notre extension de fichier en tant que `db.json`.
 
 `Ok(map => Ok(Todo { map }))`
 
-Il intérfére avec le type de retour de map et va tenter de convertir notre JSON en un HashMap compatible. Si tout va bien on retourne notre struct `Todo` comme avant.
+Il intérfére avec le type de retour de map et va tenter de convertir notre JSON en un HashMap compatible.
+Si tout va bien on retourne notre struct `Todo` comme avant.
 
 ```rust,ignore
 Err(e) if e.is_eof() => Ok(Todo {
@@ -68,7 +75,9 @@ Err(e) if e.is_eof() => Ok(Todo {
 }),
 ```
 
-C'est un [*match guard*](https://doc.rust-lang.org/reference/expressions/match-expr.html#match-guards) qui nous permet d'affiner le comportement de l'expression `match`. Si serde retourne une erreur EOF (end of file) prématuré, cela signifie que le fichier est totalement vide (par exemple au premier lancement, ou si nous supprimons le fichier). Dans ce cas on récupére de cette erreur et on retourne un HashMap vide.
+C'est un [*match guard*](https://doc.rust-lang.org/reference/expressions/match-expr.html#match-guards) qui nous permet d'affiner le comportement de l'expression `match`.
+Si serde retourne une erreur EOF (end of file) prématuré, cela signifie que le fichier est totalement vide (par exemple au premier lancement, ou si nous supprimons le fichier).
+Dans ce cas on récupére de cette erreur et on retourne un HashMap vide.
 
 `Err(e) => panic!("An error occurred: {}", e),`
 
@@ -76,7 +85,8 @@ Pour toutes les autres erreurs, on quitte immédiatement le programme.
 
 ### Mettre à jour Todo.save
 
-L'autre emplacement où nous voulons utiliser serde est là où l'on sauvegarde notre `map` en tant que JSON. Pour faire cela, mettez à jour la méthode `save` dans le bloc `impl` pour devenir:
+L'autre emplacement où nous voulons utiliser serde est là où l'on sauvegarde notre `map` en tant que JSON.
+Pour faire cela, mettez à jour la méthode `save` dans le bloc `impl` pour devenir:
 
 ```rust,ignore
 // inside Todo impl block
@@ -97,7 +107,9 @@ Comme auparavant, voyons ce qui change ici:
 `fn save(self) -> Result<(), Box<dyn std::error::Error>> {`
 
 Cette fois on renvoie une [Box](https://doc.rust-lang.org/std/boxed/struct.Box.html) contenant une implémentation d'erreur générique de Rust.
-Pour faire simple, une box est un pointeur vers une allocation en mémoire. Puisque nous pouvons retourner soit une erreur du système lors de l'ouverture du fichier, soit une erreur serde lors de sa conversion, nous ne savons pas vraiment laquelle des deux notre fonction peut renvoyer. Par conséquent, nous renvoyons un pointeur vers l'erreur possible, au lieu de l'erreur elle-même, afin que l'appelant puisse les gérer.
+Pour faire simple, une box est un pointeur vers une allocation en mémoire.
+Puisque nous pouvons retourner soit une erreur du système lors de l'ouverture du fichier, soit une erreur serde lors de sa conversion, nous ne savons pas vraiment laquelle des deux notre fonction peut renvoyer.
+Par conséquent, nous renvoyons un pointeur vers l'erreur possible, au lieu de l'erreur elle-même, afin que l'appelant puisse les gérer.
 
 `let f = std::fs::OpenOptions::new()`
 
@@ -115,4 +127,5 @@ Enfin, nous laisson serde faire le gros du travail et écrire notre HashMap sous
 
 Et voilà.
 
-Maintenant, vous pouvez lancer votre programme et vérifier la sortie enregistrée dans le fichier. Si tout s'est bien passé, vous devriez voir vos tâches enregistrées au format JSON.
+Maintenant, vous pouvez lancer votre programme et vérifier la sortie enregistrée dans le fichier.
+Si tout s'est bien passé, vous devriez voir vos tâches enregistrées au format JSON.
