--- a/src/content/15-7-use.md
+++ b/src/content/15-7-use.md
@@ -77,7 +77,7 @@ Err(e) if e.is_eof() => Ok(Todo {
 
 C'est un [*match guard*](https://doc.rust-lang.org/reference/expressions/match-expr.html#match-guards) qui nous permet d'affiner le comportement de l'expression `match`.
 Si serde retourne une erreur EOF (end of file) prématuré, cela signifie que le fichier est totalement vide (par exemple au premier lancement, ou si nous supprimons le fichier).
-Dans ce cas on récupére de cette erreur et on retourne un HashMap vide.
+Dans ce cas on récupère de cette erreur et on retourne un HashMap vide.
 
 `Err(e) => panic!("An error occurred: {}", e),`
 
@@ -121,7 +121,7 @@ On mets évidemment à jour le nom du fichier en `db.json` pour rester cohérent
 
 `serde_json::to_writer_pretty(f, &self.map)?;`
 
-Enfin, nous laisson serde faire le gros du travail et écrire notre HashMap sous forme de fichier JSON (pretty-printend).
+Enfin, nous laissons serde faire le gros du travail et écrire notre HashMap sous forme de fichier JSON (pretty-printed).
 
 *Note:* N'oubliez pas de retirer `use std::io::Read;` et `use std::str::FromStr;` au début du fichier, nous n'en avons plus besoin.
 
